modules/noosphere/taghmata/nixidy/manifests/prod/woodpecker/Namespace-woodpecker.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  name: woodpecker
