modules/noosphere/taghmata/nixidy/manifests/prod/woodpecker/Service-woodpecker-server.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: woodpecker
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: server
    app.kubernetes.io/version: 3.18.1
    helm.sh/chart: server-3.0.1
  name: woodpecker-server
  namespace: woodpecker
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - appProtocol: kubernetes.io/h2c
      name: grpc
      port: 9000
      protocol: TCP
      targetPort: grpc
  selector:
    app.kubernetes.io/instance: woodpecker
    app.kubernetes.io/name: server
  type: ClusterIP
